--- a/index.html
+++ b/index.html
@@ -25,19 +25,18 @@
         <label class="para">
             Converter <b>para</b>
             <br>
-            <select>
-                <option> Real Brasileiro </option>
-                <option> Dólar Americano </option>
-                <option> Dólar Australiano </option>
-                <option> Dólar Canadense </option>
-                <option> Euro </option>
-                <option> Franco Suiço </option>
-                <option> Iene </option>
-                <option> Libra Esterlina </option>
-                <option> Lira Turca </option>
-                <option> Peso Argentino </option>
-                <option> Won </option>
-                <option> Yuan </option>
+            <select class="convertSelect">
+                <option value="dolar"> Dólar Americano </option>
+                <option value="dolaustral"> Dólar Australiano </option>
+                <option value="dolcanad"> Dólar Canadense </option>
+                <option value="euro"> Euro </option>
+                <option value="franco"> Franco Suiço </option>
+                <option value="iene"> Iene </option>
+                <option value="libra"> Libra </option>
+                <option value="liraturca"> Lira Turca </option>
+                <option value="peso"> Peso Argentino </option>
+                <option value="won"> Won </option>
+                <option value="yuan"> Yuan </option>
             </select>
         </label>
         <br>
