mudança de imgs e valores

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             <img src="./assets/setaverde.png" class="seta">
 
             <div class="para2">
-                <img src="./assets/dolareua.png" alt="dolar-eua" class="eua">
+                <img src="./assets/dolareua.png" alt="dolar-eua" class="convert-img">
                 <br>
-                <p> Dólar Americano </p>
+                <p id="convert-name"> Dólar Americano </p>
                 <p class="otherValueConvert">US$0.0</p>
             </div>
 
